--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
 * {
     @apply font-[Poppins];
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 body {
@@ -21,6 +24,9 @@ body {
     -webkit-text-stroke: 1px white;
 }
 
+.text-stroke-black {
+    -webkit-text-stroke: 1px #0008;
+}
 
 /* Custom Scrollbar Styles */
 ::-webkit-scrollbar {
